# BuildUSD

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  _tmp_update_ifc.py  code-review.csv  ifctest.py  pyproject.toml  pytest.ini  run_local.txt  run_log.txt  temp_psu.tmp
.github/workflows/: ci.yml
buildusd/: __init__.py  __main__.py
data/output/caches/: SRL-WPD-TVC-UPKW-MOD-CTU-PWD-001001.json  SRL-WPD-TVC-XTTW-MOD-XTW-ESF-009815.json  SRL-WPD-TVC-XTTW-MOD-XTW-ESF-009820.json
data/output_test/: pass_1.usda
data/output_test/caches/: pass_1.json
data/output_test/instances/: pass_1_instances.usda
data/output_test/materials/: pass_1_materials.usda
data/output_test/prototypes/: pass_1_prototypes.usda
ifc_converter/: __init__.py  __main__.py
src/: main.py  process_ifc.py  process_usd.py
src/buildusd/: __init__.py  api.py  cli.py  conversion.py  federate.py  federate_cli.py  federation_builder.py  federation_contract.py  federation_orchestrator.py  georef_resolution.py  geospatial.py  ifc_visuals.py  io_utils.py  kit_runtime.py  main.py  occ_detail.py  occ_detail_bootstrap.py  process_ifc.py  process_ifc_2d.py  process_usd.py  pxr_utils.py  resolve_frame.py  semantic_subcomponents.py  usd_context.py
src/buildusd/config/: __init__.py  manifest.py  manifest.yaml  sample_annotation_widths.json  sample_annotation_widths.yaml  sample_manifest.json  sample_manifest.yaml
src/buildusd/federation/: __init__.py  geodetic_federation.py
src/buildusd/utils/: ifc.py  matrix_utils.py
src/config/: manifest.py  manifest.yaml
src/dev/: ifc_to_usd_prototype_iter.py  ifc_to_usd_standard_local.py  main.py
src/ifc_converter/: __init__.py  __main__.py  federate.py  io_utils.py  main.py  process_ifc.py  process_usd.py  pxr_utils.py  usd_context.py
src/ifc_converter/config/: manifest.py  sample_manifest.json
src/ifc_converter/utils/: matrix_utils.py
src/utils/: matrix_utils.py
tests/: README.md  conftest.py  repro_material_resolver.py  test_color_map_resolution.py  test_federation.py  test_georef_resolution.py  test_geospatial_mode.py  test_geospatial_offset.py  test_integration_offline.py  test_layerset_handling.py  test_loose_binding.py  test_normalization.py  test_process_ifc_coordinate_helpers.py  test_process_usd_anchor_metadata.py  test_resolve_frame.py  test_sublayer_paths.py  test_unit_options.py
