[project]
name = "buildusd"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "ifcopenshell>=0.8.3",
    "polars",
    "numpy",
    "shapely",
    ]
[project.optional-dependencies]
kit = ["omniverse-kit>=108.1", "usd-core>=25.8"]
test = ["pytest"]


[project.scripts]
ifc-convert = "ifc_converter.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
