[project]
name = "buildusd"
version = "0.1.5"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "ifcopenshell>=0.8.3",
    "polars",
    "numpy",
    "shapely",
    "pythonocc-core>=7.9.0",
    ]
[project.optional-dependencies]
kit = ["omniverse-kit>=108.1", "usd-core>=25.8"]
test = ["pytest"]


[project.scripts]
buildusd = "buildusd.main:main"
ifc-convert = "buildusd.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
